--- a/scripts/release-note.tmpl
+++ b/scripts/release-note.tmpl
@@ -1,3 +1,3 @@
 {{- define "note" -}}
-{{if eq "new-resource" .Type}}**New Resource:** {{else if eq "new-data-source" .Type}}**New Data Source:** {{ end }}{{.Body}} ([GH-{{- .Issue -}}](https://github.com/orange-cloudavenue/terraform-provider-cloudavenue/issues/{{- .Issue -}}))
+{{if eq "new-resource" .Type}}**New Resource:** {{else if eq "new-data-source" .Type}}**New Data Source:** {{ end }}{{.Body}} (GH-{{- .Issue -}})
 {{- end -}}
